Fix #33 fix widget image out of bounds

--- a/assets/css/location_sidebar.css
+++ b/assets/css/location_sidebar.css
@@ -12,6 +12,8 @@ article .title {
 }
 
 article .image {
+	width: 90%;
+	margin: 0 auto;
 	float: right;
 	border-radius: 3px;
 	margin-left: 5px;
